change music styles

--- a/layout/_partial/left-col.ejs
+++ b/layout/_partial/left-col.ejs
@@ -60,6 +60,7 @@
     </nav>
     <div class="toggleLight">
         <span class="dark">黑夜</span>
+        <span class="toggleMusic">音乐</span>
     </div>
     <div class="motto">
       <div>行 到 水 穷 处</div>
@@ -67,9 +68,13 @@
     </div>
     <div class="music">
       <!-- 《左侧边栏添加--APlayer音乐播放器 -->
-    <% if(theme.aplayer.enable) { %>
+      <% if(theme.aplayer.enable) { %>
+          <link rel="stylesheet" href="/dist/APlayer.min.css">
           <div id="aplayer"></div>
+          <script type="text/javascript" src="/dist/APlayer.min.js"></script>
+          <script type="text/javascript" src="/dist/music.js"></script>
           <% } %>
       </div>
   </header>
 </div>
+<div class="topControl"></div>
