--- a/source-src/css/archive.scss
+++ b/source-src/css/archive.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 10px 10px;
-  background-color: #222;
+  // background-color: #222;
   box-shadow: 0 0 10px #ccc inset;
   border-radius: 10px;
   padding: 8px 8px;
@@ -11,8 +11,9 @@
     position: relative;
     width: 90px;
     margin-right: 5px;
-    background-color: #292929;
+    // background-color: #292929;
     border-radius: 5px;
+    box-shadow: 0 0 2px #ccc inset;
     .archive-year {
       position: absolute;
       top: 50%;
@@ -94,9 +95,10 @@
   .archive-article-header {
     position: relative;
     min-height: 36px;
-    background-color: #292929;
+    // background-color: #292929;
     border-radius: 5px;
     margin-bottom: 5px;
+    box-shadow: 0 0 2px #ccc inset;
 
     // .art-title {
     // }
