--- a/source-src/css/main.scss
+++ b/source-src/css/main.scss
@@ -22,6 +22,7 @@
 @import "./light";
 @import "./cover";
 @import "./music";
+@import "./decorate";
 @media screen and (max-width: 800px) {
   @import "./mobile";
   @import "./mobile-slider";
