--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -2,7 +2,7 @@
 <nav id="mobile-nav">
   <div class="overlay js-overlay"
     style="background: <%= theme.style && theme.style.header ? theme.style.header : defaultBg %>"></div>
-  <div class="btnctn js-mobile-btnctn">
+  <div class="btnctn js-mobile-btnctn" style="<%=theme.style && theme.style.btnctn%>">
     <div class="slider-trigger list" q-on="click: openSlider(e)">
       <i class="icon icon-sort"></i>
     </div>
