--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -83,7 +83,7 @@
   position: relative;
   box-sizing: border-box;
   border-left: 8px solid rgb(255, 217, 0);
-  padding: 25px 0px 5px 10px;
+  padding: 29px 0px 5px 10px;
   // padding: 14px 0px 5px 10px;
   padding-left: calc(7.6923% - 8px);
   border-top-left-radius: 10px;
@@ -140,7 +140,7 @@
 .article-more-link {
   position: absolute;
   right: 0;
-  bottom: 20px;
+  bottom: 24px;
   text-align: left;
   float: right;
   border-radius: 10px;
@@ -174,7 +174,7 @@
   padding-top: 20px;
   margin: 20px $articlePadding 10px $articlePadding;
   min-height: 72px;
-  border-top: 5px solid #555;
+  border-top: 1px solid #999;
   padding-right: 90px;
 
   // .clearfix {
@@ -489,7 +489,7 @@
 
 /*版权声明的样式*/
 .declare {
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.3);
   margin-top: 2em;
   border-left: 5px solid #666;
   padding: 0.5em 1em;
