--- a/source-src/css/aside.scss
+++ b/source-src/css/aside.scss
@@ -72,8 +72,8 @@
 }
 
 .toc-container.tooltip-left {
-  background-color: #292929;
-  box-shadow: 0 0 10px black;
+  // background-color: #292929;
+  box-shadow: 0 0 5px #111;
   box-sizing: border-box;
   border-radius: 35px;
   transition: 0.3s;
@@ -136,11 +136,11 @@
       cursor: pointer;
       & a:hover {
         color: black;
-        background-color: #d9ff00;
+        background-color: #2580b3;
         border-radius: 5px;
 
         .toc-text {
-          background-color: #d9ff00;
+          background-color: #2580b3;
           display: inline-block;
           height: 100%;
           border-radius: 5px;
