--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -40,7 +40,8 @@
           text-align: center;
           margin-bottom: 10px;
 
-          .dark {
+          .dark,
+          .toggleMusic {
             display: inline-block;
             border-radius: 35px;
             width: 35px;
@@ -55,6 +56,10 @@
             color: #ccc;
             line-height: 36px;
             cursor: pointer;
+
+            &:hover {
+              color: #c4e759;
+            }
           }
 
           .light {
@@ -65,6 +70,9 @@
               #fff1eb 0%,
               #ace0f9 100%
             );
+            &:hover {
+              color: #5f72bd;
+            }
           }
         }
 
@@ -132,7 +140,6 @@
             height: 30px;
             line-height: 30px;
             cursor: pointer;
-            background-color: #252525;
             font-size: 14px;
 
             .tips-a {
@@ -160,12 +167,10 @@
               margin-top: -1px;
             }
 
-            &:not(:first-child, :last-child) {
-              border-left: 1px solid #212121;
-              border-right: 1px solid #212121;
-            }
-
-            // border-radius: 6px;
+            // &:not(:first-child, :last-child) {
+            //   border-left: 1px solid #212121;
+            //   border-right: 1px solid #212121;
+            // }
 
             a {
               display: inline-block;
@@ -174,7 +179,7 @@
             }
 
             &:hover {
-              background-color: #959595;
+              background-color: #9ea0b0;
               color: rgb(255, 217, 0);
             }
           }
