change toc styles

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.553ca3.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.7106f4.css">
