--- a/source-src/css/light.scss
+++ b/source-src/css/light.scss
@@ -117,7 +117,7 @@
     .toc-article
     li
     a:hover {
-    color: #4facfe;
+    color: #9b23ea;
     background-color: #d7fffe;
 
     .toc-text {
