--- a/source-src/css/mobile-light.scss
+++ b/source-src/css/mobile-light.scss
@@ -47,6 +47,25 @@
   box-shadow: none !important;
 }
 
+.wrap-side-operation
+  .toc-container.tooltip-left
+  .tooltip-east
+  .tooltip-content
+  a {
+  color: #333;
+  font-weight: 700;
+}
+
+.wrap-side-operation
+  .toc-container.tooltip-left
+  .tooltip-east
+  .tooltip-content
+  .toc-article
+  li
+  a:hover {
+  background-color: #d7fffe;
+}
+
 .container #footer {
   .outer {
     box-shadow: initial;
