change toc style of mobile

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -154,18 +154,18 @@ body,
 
           li {
             a:hover {
-              background-color: #10c700;
+              background-color: #2580b3;
             }
           }
 
           a:hover {
             .toc-text {
-              background-color: #10c700;
+              background-color: #2580b3;
             }
           }
         }
         a {
-          color: #00ffb8;
+          color: #fdfdfd;
           font-weight: 700;
         }
       }
