--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.40ccc7.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.495229.css">
