--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -49,4 +49,7 @@
   <div class="mobileToggleLight">
     <span class="mobileDark">黑夜</span>
   </div>
+  <div class="toTop">
+    <span class="toTopDark">Top</span>
+  </div>
 </nav>
