--- a/layout/_partial/post/gitalk.ejs
+++ b/layout/_partial/post/gitalk.ejs
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="https://unpkg.com/gitalk@latest/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
-<script src="https://priesttomb.github.io/js/md5.min.js"></script>
+<link rel="stylesheet" href="/gitalk-dist/gitalk.css">
+<script src="/gitalk-dist/gitalk.min.js"></script>
+<script src="/gitalk-dist/md5.js"></script>
 <script type="text/javascript">
   new Gitalk({
     clientID: '5821385ca1ed52b2134e',
