--- a/source-src/css/main.scss
+++ b/source-src/css/main.scss
@@ -19,6 +19,7 @@
 @import "./aside";
 @import "./tooltip";
 @import "./footer";
+@import "./gitalk";
 @import "./light";
 @import "./cover";
 @import "./music";
