--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.49ef9b.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.042cc0.css">
