--- a/source-src/css/mobile-light.scss
+++ b/source-src/css/mobile-light.scss
@@ -93,4 +93,53 @@
       color: #fdfdfd;
     }
   }
+
+  #gitalk-container {
+    padding: 0 10px;
+
+    .gt-container {
+      padding: 0 5px 15px 5px;
+      box-shadow: 0 0 3px #fdfdfd inset;
+
+      .gt-counts {
+        color: #333;
+      }
+
+      .gt-user-name {
+        color: #333;
+      }
+
+      .gt-btn-preview {
+        box-shadow: 0 0 5px #ccc inset;
+        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
+        color: #333;
+      }
+
+      .gt-btn-login {
+        box-shadow: 0 0 5px #ccc inset;
+        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
+        color: #333;
+      }
+
+      .gt-copyright {
+        border-top: none;
+      }
+
+      .gt-header-textarea {
+        border: none;
+        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
+        color: #333;
+      }
+
+      .gt-header-preview {
+        border: none;
+        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
+
+        p {
+          color: #000;
+          font-size: 14px;
+        }
+      }
+    }
+  }
 }
