--- a/source-src/css/gitalk.scss
+++ b/source-src/css/gitalk.scss
@@ -72,11 +72,11 @@
     }
 
     .gt-comment-content:hover {
-      box-shadow: 0 0 8px #ccc inset;
+      box-shadow: 0 0 5px #ccc inset;
     }
 
     .gt-comment-admin .gt-comment-content {
-      background-color: #292929;
+      background-image: linear-gradient(-335deg, #475682, #2e5676);
     }
 
     .gt-comment-body p {
