--- a/source-src/css/page.scss
+++ b/source-src/css/page.scss
@@ -4,7 +4,7 @@
   .page-number {
     width: 20px;
     height: 25px;
-    background: #4d4d4d;
+    background: #999;
     display: inline-block;
     color: #fff;
     line-height: 25px;
