--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -4,7 +4,7 @@
       <i class="icon-calendar icon"></i><%= date(post.date, date_format) %>
     </time>
   </a>
-  <% if (theme.busuanzi && theme.busuanzi.enable && !index){ %>
+  <% if (theme.busuanzi && theme.busuanzi.enable && !index && post.encrypt !== true){ %>
   <!-- 不蒜子统计 -->
   <span id="busuanzi_container_page_pv" style='display:none' class="<%= class_name %> count">
     阅读数：<span id="busuanzi_value_page_pv"></span>次
