--- a/source-src/css/mobile-light.scss
+++ b/source-src/css/mobile-light.scss
@@ -3,7 +3,7 @@
     background-color: transparent;
     background-image: linear-gradient(
       to top,
-      #fff1eb 0%,
+      #ddeaf0 0%,
       #ace0f9 100%
     ) !important;
     box-shadow: 0 1px 6px #fff;
@@ -91,55 +91,6 @@
       box-shadow: initial;
       background-color: transparent;
       color: #fdfdfd;
-    }
-  }
-
-  #gitalk-container {
-    padding: 0 10px;
-
-    .gt-container {
-      padding: 0 5px 15px 5px;
-      box-shadow: 0 0 3px #fdfdfd inset;
-
-      .gt-counts {
-        color: #333;
-      }
-
-      .gt-user-name {
-        color: #333;
-      }
-
-      .gt-btn-preview {
-        box-shadow: 0 0 5px #ccc inset;
-        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
-        color: #333;
-      }
-
-      .gt-btn-login {
-        box-shadow: 0 0 5px #ccc inset;
-        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
-        color: #333;
-      }
-
-      .gt-copyright {
-        border-top: none;
-      }
-
-      .gt-header-textarea {
-        border: none;
-        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
-        color: #333;
-      }
-
-      .gt-header-preview {
-        border: none;
-        background-image: linear-gradient(-45deg, #fff1eb 0%, #ace0f9 100%);
-
-        p {
-          color: #000;
-          font-size: 14px;
-        }
-      }
     }
   }
 }
