change music styles

--- a/source-src/css/music.scss
+++ b/source-src/css/music.scss
@@ -52,6 +52,7 @@
         li {
           box-shadow: 0 0 6px #ccc inset;
           color: #c9c9c9;
+          background: transparent;
         }
         li.aplayer-list-light {
           background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
