change code styles

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.bdafeb.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.c5d9d3.css">
