--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -91,7 +91,7 @@
   }
   p code,
   li code {
-    padding: 1px 3px;
+    padding: 3px 3px 1px;
     margin: 0 3px;
     background: green;
     font-family: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New",
