--- a/source-src/css/article.scss
+++ b/source-src/css/article.scss
@@ -143,7 +143,7 @@
   }
   p code,
   li code {
-    padding: 1px 3px;
+    padding: 3px 3px 1px;
     margin: 0 3px;
     background: green;
     // border: 1px solid #ccc;
