--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -83,13 +83,14 @@
   position: relative;
   box-sizing: border-box;
   border-left: 8px solid rgb(255, 217, 0);
-  padding: 29px 0px 5px 10px;
+  padding: 32px 0px 5px 10px;
   // padding: 14px 0px 5px 10px;
   padding-left: calc(7.6923% - 8px);
   border-top-left-radius: 10px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  margin-bottom: 13px;
 
   .article-count {
     padding-right: 7.6923%;
@@ -140,7 +141,7 @@
 .article-more-link {
   position: absolute;
   right: 0;
-  bottom: 24px;
+  bottom: 30px;
   text-align: left;
   float: right;
   border-radius: 10px;
@@ -171,9 +172,9 @@
 }
 .article-info-index.article-info {
   position: relative;
-  padding-top: 20px;
-  margin: 20px $articlePadding 10px $articlePadding;
-  min-height: 72px;
+  padding-top: 6px;
+  margin: 16px $articlePadding 10px $articlePadding;
+  min-height: 63px;
   border-top: 1px solid #999;
   padding-right: 90px;
 
