--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.4bb480.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.fb1662.css">
