--- a/source-src/css/light.scss
+++ b/source-src/css/light.scss
@@ -179,6 +179,10 @@
         ul {
           li {
             color: #333;
+            &::before {
+              border: 1px solid #666;
+              background: #666;
+            }
           }
         }
       }
