--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -115,7 +115,8 @@
           .homeIcon {
             width: 45px;
             height: 45px;
-            background: url(../css/img/home.png) no-repeat;
+            // background: url(../css/img/home.png) no-repeat;
+            background: url(../css/img/home.svg) no-repeat;
             background-size: 45px 45px;
             cursor: pointer;
           }
@@ -125,52 +126,55 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          display: none;
+          // display: none;
 
           &::before {
             content: "";
             width: 0;
             height: 0;
-            border: 10px solid;
+            border: 0px solid;
             border-color: transparent transparent #595757;
+            transition: all 0.3s ease;
           }
 
           .tips-text {
             width: 60%;
-            height: 30px;
+            height: 0px;
             line-height: 30px;
             cursor: pointer;
             font-size: 14px;
+            transition: all 0.3s ease;
 
             .tips-a {
               color: hsla(0, 0%, 88%, 0.6);
               font-weight: 700;
+              // display: none;
+              visibility: hidden;
+              transition: all 0.05s ease;
             }
 
             &:first-child {
               border-top-left-radius: 6px;
               border-top-right-radius: 6px;
-              box-shadow: 0px 0px 5px #ccc inset;
+              box-shadow: none;
               position: relative;
               z-index: 5;
+              transition: all 0.3s ease;
             }
 
             &:nth-child(2) {
-              box-shadow: 0px 0px 5px #ccc inset;
+              box-shadow: none;
               margin-top: -1px;
+              transition: all 0.3s ease;
             }
 
             &:last-child {
               border-bottom-left-radius: 6px;
               border-bottom-right-radius: 6px;
-              box-shadow: 0px 0px 5px #ccc inset;
+              box-shadow: none;
               margin-top: -1px;
+              transition: all 0.3s ease;
             }
-
-            // &:not(:first-child, :last-child) {
-            //   border-left: 1px solid #212121;
-            //   border-right: 1px solid #212121;
-            // }
 
             a {
               display: inline-block;
@@ -189,6 +193,41 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+
+          &::before {
+            content: "";
+            width: 0;
+            height: 0;
+            border: 10px solid;
+            border-color: transparent transparent #595757;
+            transition: all 0.3s ease;
+          }
+
+          .tips-text {
+            height: 30px;
+            transition: all 0.3s ease;
+
+            .tips-a {
+              // display: block;
+              visibility: visible;
+              transition: all 0.05s ease;
+            }
+
+            &:first-child {
+              box-shadow: 0px 0px 5px #ccc inset;
+              transition: all 0.3s ease;
+            }
+
+            &:nth-child(2) {
+              box-shadow: 0px 0px 5px #ccc inset;
+              transition: all 0.3s ease;
+            }
+
+            &:last-child {
+              box-shadow: 0px 0px 5px #ccc inset;
+              transition: all 0.3s ease;
+            }
+          }
         }
       }
 
@@ -275,21 +314,25 @@
         position: relative;
         overflow: hidden;
         background: #88acdb;
-        -webkit-transition: all 0.2s ease-in;
         display: -webkit-box;
         -webkit-box-orient: horizontal;
         -webkit-box-pack: center;
         -webkit-box-align: center;
         text-align: center;
-        &:hover {
-          animation-name: turnY;
-          animation-duration: 3s;
-          animation-iteration-count: 1;
-        }
         img {
           border-radius: 300px;
           opacity: 1;
-          -webkit-transition: all 0.2s ease-in;
+          -webkit-transition: -webkit-transform 1s ease-out;
+          -moz-transition: -moz-transform 1s ease-out;
+          transition: transform 1s ease-out;
+          &:hover {
+            // animation-name: turnY;
+            // animation-duration: 3s;
+            // animation-iteration-count: 1;
+            -webkit-transform: rotateZ(360deg);
+            -moz-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+          }
           &.show {
             width: 100%;
             height: 100%;
