update home icon styles

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.52ca71.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.8f54f8.css">
