--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -199,7 +199,7 @@
             width: 0;
             height: 0;
             border: 10px solid;
-            border-color: transparent transparent #52587a;
+            border-color: transparent transparent #817b95;
             transition: all 0.3s ease;
           }
 
