--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -146,10 +146,10 @@
   float: right;
   border-radius: 10px;
   a {
-    box-shadow: 0 0 8px black;
+    box-shadow: 0 0 3px #ccc inset;
     color: #ccc;
     font-size: 12px;
-    padding: 1px 5px;
+    padding: 2px 5px;
     line-height: 14px;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
