--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -2,7 +2,8 @@
   <div class="outer">
     <div id="footer-info">
       <div class="footer-left">
-        &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
+        &copy; 2020 <%= config.author || config.title %> ~ NingHaiDeng
+        <!-- &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %> -->
       </div>
       <div class="busuanzi">
         <% if (theme.busuanzi && theme.busuanzi.enable){ %>
@@ -18,7 +19,7 @@
       </div>
       <div class="footer-right">
         <a href="http://hexo.io/" target="_blank">Hexo</a> Theme <a href="https://github.com/dnhyxc/hexo-themes-dnhyxc"
-          target="_blank">dnhyxc</a> by ninghai
+          target="_blank">dnhyxc</a> by dnhyxc
       </div>
     </div>
   </div>
