change toc styles

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.f9bb24.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.f49ac0.css">
