--- a/source-src/css/grid.scss
+++ b/source-src/css/grid.scss
@@ -31,15 +31,15 @@ body,
   // );
   // background-image: linear-gradient(-45deg, #2b5876 0%, #4e4376 100%);
   overflow-y: hidden;
-  -moz-user-select: none;
-  /*火狐*/
-  -webkit-user-select: none;
-  /*webkit浏览器*/
-  -ms-user-select: none;
-  /*IE10*/
-  -khtml-user-select: none;
-  /*早期浏览器*/
-  user-select: none;
+  // -moz-user-select: none;
+  // /*火狐*/
+  // -webkit-user-select: none;
+  // /*webkit浏览器*/
+  // -ms-user-select: none;
+  // /*IE10*/
+  // -khtml-user-select: none;
+  // /*早期浏览器*/
+  // user-select: none;
 }
 
 #mobile-nav {
