update menu styles

--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -2,7 +2,7 @@
   margin: 10px 10px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  box-shadow: 0px 0px 10px #ccc inset;
+  box-shadow: 0px 0px 10px #cecece inset;
   width: 300px;
   position: fixed;
   opacity: 1;
