--- a/source-src/css/grid.scss
+++ b/source-src/css/grid.scss
@@ -157,7 +157,7 @@ body,
     margin: 10px 10px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    box-shadow: inset 0 2px 8px #ccc;
+    box-shadow: inset 0 2px 8px -1px #ccc;
     font-size: 24px;
     font-weight: 700;
     text-align: left;
