--- a/source-src/css/grid.scss
+++ b/source-src/css/grid.scss
@@ -60,7 +60,7 @@ body,
   }
 }
 .body-wrap {
-  height: calc(100% - 140px);
+  height: calc(100% - 178px);
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -152,12 +152,13 @@ body,
   .main {
     position: relative;
     box-sizing: border-box;
-    height: 50px;
-    line-height: 50px;
+    height: 69px;
+    line-height: 69px;
+    // line-height: 50px;
     margin: 10px 10px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    box-shadow: inset 0 2px 8px -1px #ccc;
+    box-shadow: inset 0 2px 8px #ccc;
     font-size: 24px;
     font-weight: 700;
     text-align: left;
