--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.fe8dfc.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.de860e.css">
