--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -5,7 +5,9 @@
 .article {
   .browserCover {
     width: 100%;
-    height: calc(100vh - 401px);
+    height: calc(100vh - 356px);
+    border-top: 1px solid #999;
+    padding-top: 16px;
   }
 }
 
