--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.d132a1.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.0d9640.css">
