--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -5,7 +5,7 @@
 .article {
   .browserCover {
     width: 100%;
-    height: calc(100vh - 356px);
+    height: calc(100vh - 343px);
     border-top: 1px solid #999;
     padding-top: 16px;
   }
@@ -105,7 +105,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 13px;
+  // margin-bottom: 13px;
 
   .article-count {
     padding-right: 7.6923%;
