--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -292,6 +292,7 @@ body,
   justify-content: space-between;
   flex-direction: column;
   align-items: flex-start;
+  margin-bottom: 13px;
 
   .article-count {
     margin-left: 0px;
@@ -374,6 +375,12 @@ body,
   border: 0;
   font-size: 16px;
   color: #ccc;
+
+  .browserCover {
+    border-top: none;
+    padding-top: 0px;
+  }
+
   .article-more-link {
     position: absolute;
     right: 0;
