--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -106,7 +106,7 @@
     padding: 10px 10px;
     margin-top: 10px;
     border-left: 5px solid #ffd900;
-    background: #7e7b6f;
+    background: #d3eaca;
     color: rgb(26, 25, 25);
     p {
       margin-top: 0;
