--- a/source-src/css/music.scss
+++ b/source-src/css/music.scss
@@ -68,8 +68,8 @@
       max-width: 261px;
       left: 20px;
       bottom: 22px;
-      border-top-right-radius: 10px;
-      border-bottom-left-radius: 10px;
+      // border-top-right-radius: 10px;
+      // border-bottom-left-radius: 10px;
       left: -66px;
       visibility: hidden;
       transition: all 0.3s ease;
