update article styles

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -350,7 +350,7 @@ body,
   min-height: 40px;
   padding-top: 10px;
   margin: 0;
-  border-top: 1px solid #888;
+  border-top: 1px dotted #ddd;
 }
 .article-info-post.article-info {
   margin: 0;
@@ -396,7 +396,7 @@ body,
     padding: 0 0;
 
     h3 {
-      border-bottom: 1px solid #888;
+      border-bottom: 1px dashed #eae2b9;
       padding-bottom: 5px;
     }
 
