--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.b8b76b.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.c7c5b1.css">
