--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -4,7 +4,7 @@
 
 @media screen and (max-width: 800px) {
   .browserCover {
-    padding-bottom: 13px;
+    margin-bottom: 13px;
   }
   .coverInfo {
     display: none;
@@ -19,6 +19,26 @@
   .browserCover {
     width: 100%;
     height: calc(100vh - 373px);
+    animation-name: imageAnimation;
+    animation-duration: 12s;
+    animation-iteration-count: infinite;
+  }
+
+  @keyframes imageAnimation {
+    0% {
+      background-image: url(./img/c1.png);
+      background-size: 100% 100%;
+    }
+
+    50% {
+      background-image: url(./img/c2.png);
+      background-size: 100% 100%;
+    }
+
+    100% {
+      background-image: url(./img/c1.png);
+      background-size: 100% 100%;
+    }
   }
 
   .coverInfo {
