change coverImage styles

--- a/source-src/css/article-inner.scss
+++ b/source-src/css/article-inner.scss
@@ -106,8 +106,8 @@
     padding: 10px 10px;
     margin-top: 10px;
     border-left: 5px solid #ffd900;
-    background: #d3eaca;
-    color: rgb(26, 25, 25);
+    background: rgba(225, 225, 225, 0.3);
+    color: #000;
     p {
       margin-top: 0;
       margin-bottom: 0;
