--- a/source-src/css/light.scss
+++ b/source-src/css/light.scss
@@ -152,7 +152,7 @@
       }
       .article-entry {
         blockquote {
-          background: #d2e2cd;
+          background: rgba(225, 225, 225, 0.6);
         }
         h1,
         h2,
